# js-memory-forensics-sandbox

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: README.md  user_guide.md
docs/api/html/: _r_e_a_d_m_e_8md.html  analysis__types_8hpp.html  analysis__types_8hpp.js  analysis__types_8hpp_source.html  annotated.html  annotated_dup.js  base64_8cpp.html  base64_8cpp.js  base64_8hpp.html  base64_8hpp.js  base64_8hpp_source.html  class_js_sandbox-members.html  class_js_sandbox.html  class_js_sandbox.js  class_js_sandbox_1_1_impl-members.html  class_js_sandbox_1_1_impl.html  class_js_sandbox_1_1_impl.js  class_memory_dumper-members.html  class_memory_dumper.html  class_memory_dumper.js  class_v8_runtime-members.html  class_v8_runtime.html  class_v8_runtime.js  class_v8_runtime_1_1_impl-members.html  class_v8_runtime_1_1_impl.html  class_v8_runtime_1_1_impl.js  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  js__sandbox_8cpp.html  js__sandbox_8cpp.js  (+47 more)
docs/api/html/search/: all_0.js  all_10.js  all_11.js  all_17.js  all_1a.js  all_1b.js  all_1d.js  all_2.js  all_20.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  (+32 more)
samples/: harmless_obfuscated.js
scripts/: install_ubuntu_deps.sh
src/: analysis_types.hpp  base64.cpp  base64.hpp  js_sandbox.cpp  js_sandbox.hpp  js_sandbox_stub.cpp  main.cpp  memory_dumper.cpp  memory_dumper.hpp  string_finder.cpp  string_finder.hpp
tests/: test_core.cpp
